@@ -39,6 +39,7 @@ import org.eclipse.sirius.tests.unit.api.modelingproject.SaveWhenNoEditorsTests;
 import org.eclipse.sirius.tests.unit.api.modelingproject.SemanticResourcesManagementTests;
 import org.eclipse.sirius.tests.unit.api.navigator.GroupingContentProviderByContainingTest;
 import org.eclipse.sirius.tests.unit.api.navigator.GroupingContentProviderTest;
+import org.eclipse.sirius.tests.unit.api.query.NotificationQueryTests;
 import org.eclipse.sirius.tests.unit.api.refresh.ModifyHeaderLabelExpressionTest;
 import org.eclipse.sirius.tests.unit.api.representation.DRepresentationLocationManagerTest;
 import org.eclipse.sirius.tests.unit.api.representation.InvalidRepresentationTest;
@@ -355,6 +356,7 @@ public class AllCommonPluginTests extends TestCase {
 
         suite.addTestSuite(PageOrdererTest.class);
         suite.addTestSuite(ModelingProjectDetectionTest.class);
+        suite.addTestSuite(NotificationQueryTests.class);
     }
 
     /**
